--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav d-flex w-100 justify-content-between mb-2 mb-lg-0">
         <div class="d-flex links">
-          <li class="nav-item" *ngIf="isLogin && !checkIfAdmin()">
+          <li class="nav-item" *ngIf="!checkIfAdmin()">
             <a
               class="nav-link"
               aria-current="page"
@@ -73,7 +73,7 @@
               Register
             </a>
           </li>
-        
+
           <li class="nav-item" (click)="logout()" *ngIf="isLogin">
             <a
               class="nav-link"
